--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>BASQUIAT IS THE GREATEST</h1>
 	<h3>Created By Abdul Bai kamara</h3>
+	<h3>By Teddy Kitambala</h3>
 <img src="images/basquiat.jpg" alt="Self Portrait Spring 1984"/>
 <p>Jean-Michel Basquait is the greatest artist the world has seen thus far.<br> Prince Roger Nelson is the only one who comes even remotely close.<br> I'll be damned if there will ever be a greater artist.</p><br>
 Here is a working link to our <a href="https://www.buas.nl/">school website </a>
