--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 	
 <body>
 	
-<div class="Title"><h1>BASQUIAT IS THE GREATEST</h1></div>
+<div class="title"><h1>BASQUIAT IS THE GREATEST</h1></div>
 	
 	<h3 id="my-id">Created By Abdul Bai kamara</h3>
 	
-<div class="my-container"><img src="images/basquiat.jpg" alt="Self Portrait Spring 1984"/>
-
+<div class="my-container">
+	<aside>
+	<img src="images/basquiat.jpg" alt="Self Portrait Spring 1984"/>
+</aside>
 
 	<h3>Created By Abdul Bai kamara</h3>
+	<section>
 	<h3>By Teddy Kitambala</h3>
-
+</section>
 
 <p>Jean-Michel Basquait is the greatest artist the world has seen thus far.<br> Prince Roger Nelson is the only one who comes even remotely close.<br> I'll be damned if there will ever be a greater artist.</p><br>
 Here is a working link to our <a href="https://www.buas.nl/">school website </a></div>
@@ -25,6 +28,9 @@ Here is a working link to our <a href="https://www.buas.nl/">school website </a>
 <div class="lorem">
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
 	</div>
+	<footer>
+		<h4>Learn More</h4>
+		</footer>
 </body>
 </html>
 
