--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <p>Jean-Michel Basquait is the greatest artist the world has seen thus far.<br> Prince Roger Nelson is the only one who comes even remotely close.<br> I'll be damned if there will ever be a greater artist.</p><br>
 Here is a working link to our <a href="https://www.buas.nl/">school website </a></div>
 	
-<div class="lorem">
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
+<div class="margin">
+	<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
 	</div>
 	<footer>
 		<h4>Learn More</h4>
